Add cancel and add button to book form
*adds styling to both buttons
*adds styling to input fields

--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
                     <p>Have you read it?</p>
                     <input type="checkbox" name="checkbox">
                 </div>
-                <button type="submit" class="new-book">Add</button>
+                <div class="form-buttons">
+                    <button type="button" class="new-book" id="cancel-button">Cancel</button>
+                    <button type="submit" class="new-book">Add</button>
+                </div>
             </div>
         </form>
     </dialog>
