--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
                 <div class="checkbox">
                     <label for="checkbox"></label>
                     <p>Have you read it?</p>
-                    <input type="checkbox" name="checkbox">
+                    <input type="checkbox" name="checkbox" id="checkbox">
                 </div>
                 <div class="form-buttons">
                     <button type="button" class="new-book" id="cancel-button">Cancel</button>
-                    <button type="submit" class="new-book">Add</button>
+                    <button type="submit" class="new-book" id="submit">Add</button>
                 </div>
             </div>
         </form>
