--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <button class="new-book">+ New Book</button>
     </header>
     <dialog class="modal">
-        <form action="" method="dialog">
+        <form action="" method="dialog" id="form">
             <div class="book-form">
                 <h2>New Book</h2>
                 <div class="form-input">
