Add new function for form
Displays book details from the user's input on the
HTML.

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
             </div>
         </form>
     </dialog>
+    <div id="book-list">
+        <div class="book-container"></div>
+    </div>
     <script src="java.js"></script>
 </body>
 </html>
