Adds buttons to book display
*button that toggles between read or not
*button that deletes the book

--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
         </form>
     </dialog>
     <div id="book-list">
-        <div class="book-container"></div>
+        <div class="book-container"><h2>Harry Potter</h2><p>By: J.K Rowling</p><p>Pages: 500</p><p>Read: no</p></div>
     </div>
+    
     <script src="java.js"></script>
 </body>
 </html>
