--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Library</title>
 </head>
 <body>
     <header>
@@ -39,10 +39,7 @@
             </div>
         </form>
     </dialog>
-    <div id="book-list">
-        <div class="book-container"><h2>Harry Potter</h2><p>By: J.K Rowling</p><p>Pages: 500</p><p>Read: no</p></div>
-    </div>
-    
+    <div id="book-list"></div>
     <script src="java.js"></script>
 </body>
 </html>
